python/tests/manifests/ambassador.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: {self.path.k8s}
  labels:
    app.kubernetes.io/component: ambassador-service
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
  {extra_ports}
  selector:
    service: {self.path.k8s}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: {self.path.k8s}-admin
  name: {self.path.k8s}-admin
spec:
  type: ClusterIP
  ports:
  - name: {self.path.k8s}-admin
    port: 8877
    targetPort: 8877
  selector:
    service: {self.path.k8s}
---
apiVersion: v1
kind: Pod
metadata:
  name: {self.path.k8s}
  annotations:
    sidecar.istio.io/inject: "false"
  labels:
    service: {self.path.k8s}
spec:
  securityContext:
    runAsUser: 8888
  serviceAccountName: {self.path.k8s}
  restartPolicy: Always
  volumes:
    - name: scratchpad
      emptyDir:
        medium: Memory
        sizeLimit: "45Mi"
    - name: ambassador-pod-info
      downwardAPI:
        items:
        - path: "labels"
          fieldRef:
            fieldPath: metadata.labels
  containers:
  - name: ambassador
    image: {image}
    env:
    {envs}
    - name: AMBASSADOR_NAMESPACE
      valueFrom:
        fieldRef:
          fieldPath: metadata.namespace
    - name: AMBASSADOR_ID
      value: {self.path.k8s}
    - name: AMBASSADOR_SNAPSHOT_COUNT
      value: "0"
    - name: AMBASSADOR_CONFIG_BASE_DIR
      value: "/tmp/ambassador"
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      {capabilities_block}
    livenessProbe:
      httpGet:
        path: /ambassador/v0/check_alive
        port: 8877
      initialDelaySeconds: 30
      periodSeconds: 10
      failureThreshold: 30
    readinessProbe:
      httpGet:
        path: /ambassador/v0/check_ready
        port: 8877
      initialDelaySeconds: 30
      periodSeconds: 10
      failureThreshold: 30
    volumeMounts:
      - mountPath: /tmp/
        name: scratchpad
      - name: ambassador-pod-info
        mountPath: /tmp/ambassador-pod-info
