python/tests/manifests/dummy_pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: dummy-pod
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  securityContext:
    runAsUser: 8888
  restartPolicy: Never
  volumes:
    - name: scratchpad
      emptyDir:
        medium: Memory
        sizeLimit: "45Mi"
    - name: ambassador-pod-info
      downwardAPI:
        items:
        - path: "labels"
          fieldRef:
            fieldPath: metadata.labels
  containers:
  - name: ambassador
    image: {environ[AMBASSADOR_DOCKER_IMAGE]}
    imagePullPolicy: Always
    command: [ "sh" ]
    args: [ "-c", "while true; do sleep 3600; done" ]
