python/tests/manifests/kat_client_pod.yaml

---
apiVersion: v1
kind: Pod
metadata:
  name: kat
  labels:
    backend: kat
spec:
  containers:
  - name: backend
    image: {environ[KAT_CLIENT_DOCKER_IMAGE]}
    # FIXME(lukeshu): Adjust the certs in selfsigned.py so that we can drop this
    env:
    - name: "GODEBUG"
      value: "x509ignoreCN=0"
